# sofalite

./: .gitignore  0_minify_sofalite.py  README.md  pyproject.toml  requirements.txt  setup.py
sofalite/: __init__.py  conf.py  demo.py  start.py
sofalite/conf/: chart.py  data.py  misc.py  paths.py  style.py
sofalite/conf/charting/: data.py  misc.py  other_specs.py  std_specs.py
sofalite/conf/charts/data/: __init__.py  freq_specs.py  vals.py  xys.py
sofalite/conf/charts/output/: non_standard.py  standard.py
sofalite/conf/tables/: misc.py
sofalite/conf/tables/output/: cross_tab.py
sofalite/demos/: demo_charts.py  demo_tables.py
sofalite/output/charts/: area.py  bar.py  bar_chart.py  boxplot.py  common.py  conf.py  histo.py  html.py  line.py  mpl_pngs.py  pie.py  scatterplot.py  utils.py
sofalite/output/css/: default.py  grey_spirals.py  misc.py  prestige_screen.py
sofalite/output/js/: sofalite.js.uncompressed.js  sofalite_charts.js
sofalite/output/stats/: anova.py  common.py  conf.py  ttest_indep.py
sofalite/output/styles/: default.py  grey_spirals.py  misc.py  prestige_screen.py
sofalite/output/tables/: cross_tab.py
sofalite/results/html/: anova.py  css.py
sofalite/results/sql_extraction/: db.py  utils.py
sofalite/results/stats/: anova.py  conf.py  engine.py  utils.py
sofalite/sql_extraction/: db.py  utils.py
sofalite/sql_extraction/charts/: box_vals.py  freq_specs.py  histo_vals.py  vals.py  xys.py
sofalite/stats_calc/: anova.py  conf.py  engine.py  histogram.py  ttest_indep.py  utils.py
sofalite/utils/: dates.py  maths.py  misc.py  paths.py
src/sofalite/: __init__.py  conf.py
src/sofalite/conf/: __init__.py  main.py  misc.py  stats_calc.py  style.py  var_labels.py
src/sofalite/conf/charts/: misc.py
src/sofalite/conf/charts/output/: non_standard.py
src/sofalite/conf/stats/: interfaces.py  utils.py
src/sofalite/conf/tables/: misc.py
src/sofalite/conf/tables/output/: common.py  cross_tab.py  freq.py
src/sofalite/data_extraction/: db.py  interfaces.py  utils.py
src/sofalite/data_extraction/charts/: boxplot.py  freq_specs.py  histogram.py  scatterplot.py  xys.py
src/sofalite/data_extraction/stats/: anova.py  chi_square.py  interfaces.py  spearmansr.py  ttest_indep.py
src/sofalite/demos/: demo_charts.py  demo_combined.py  demo_custom_styles.py  demo_db_settings.py  demo_stats.py  demo_tables.py  demo_tbls.py  insert_extras_approach.py
src/sofalite/demos/pandas_merging_poc/: __init__.py  col_multi_index_sort.py  step_1_merging.py  step_1_merging_poc.py  step_2_totals_poc.py  step_3_row_col_pcts_poc.py  step_4_softwire_poc.py  step_4b_softwire_poc.py  step_5_format_numbers_poc.py  step_6_from_module_poc.py
src/sofalite/demos/pandas_merging_poc/utils/: html_fixes.py  misc.py  multi_index_sort.py
src/sofalite/init_conf/: __init__.py
src/sofalite/init_conf/stats/: engine.py  interfaces.py
src/sofalite/init_conf/utils/: maths.py  stats.py
src/sofalite/output/: __init__.py  interfaces.py  utils.py
src/sofalite/output/charts/: area.py  bar.py  boxplot.py  common.py  conf.py  histogram.py  html.py  interfaces.py  line.py  main_interfaces.py  mpl_pngs.py  pie.py  scatterplot.py  utils.py
src/sofalite/output/charts/boomslang/: Bar.py  ClusteredBars.py  Label.py  Line.py  Plot.py  PlotInfo.py  PlotLayout.py  Scatter.py  StackedBars.py  Utils.py  __init__.py
src/sofalite/output/js/: sofalite.js.uncompressed.js  sofalite_charts.js  sofalitedojo_minified.js
src/sofalite/output/stats/: __init__.py  anova.py  chi_square.py  common.py  pearsonsr.py  spearmansr.py  ttest_indep.py
src/sofalite/output/styles/: __init__.py  default.py  grey_spirals.py  horrific.yaml  interfaces.py  misc.py  prestige_screen.py  two_degrees.py  utils.py
src/sofalite/output/tables/: __init__.py  cross_tab.py  freq.py  interfaces.py
src/sofalite/output/tables/utils/: html_fixes.py  misc.py  multi_index_sort.py  tree_indexer.py
src/sofalite/sql_extraction/: utils.py
src/sofalite/sql_extraction/charts/: box_vals.py  freq_specs.py
src/sofalite/stats_calc/: base_interfaces.py  boxplot.py  engine.py  histogram.py  interfaces.py  ttest_indep.py  utils.py
src/sofalite/utils/: labels.py  maths.py  misc.py  stats.py
store/: var_labels.yaml
tests/: __init__.py  test_sofalite.py
