[project]
name = "sofalite"
version = "0.2.2"
description = "SofaLite - SOFA Statistics the Python Library"
authors = [
    { name = "Grant Paton-Simpson", email = "grant@sofastatistics.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.3",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "ruamel-yaml>=0.18.10",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "import-linter>=2.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sofalite"]

## >>> lint-imports
## https://import-linter.readthedocs.io/en/stable/contract_types.html#layers

[tool.importlinter]
root_packages = [ "sofalite" ]

[[tool.importlinter.contracts]]
name = "Layered Design"
type = "layers"
layers = [
    "start",
    "output",
    "data_extraction",  ## can define and populate interfaces used by output
    "stats_calc",  ## low down so interfaces higher up can draw on it
    "utils",  ## no dependency utils
    "conf",  ## actual conf, not interfaces
]
containers = ["sofalite"]
exhaustive = false
exhaustive_ignores = []

[[tool.importlinter.contracts]]
name = "stats_calc"
type = "layers"
layers = [
    "engine",  ## engine can enrich base interface to produce "smart" interfaces with calculated properties if required
    "base_interfaces",
]
containers = ["sofalite.stats_calc"]
exhaustive = false
exhaustive_ignores = []
